# AutoMeshTracker

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md
dockers/: build_dockers.sh  dockerfile_base  dockerfile_build  dockerfile_cgal  dockerfile_meshlab  dockerfile_pcl
meshtracker/: CMakeLists.txt  main.cpp  solver_options.conf
meshtracker/include/: cloud_processing.h  constants.h  cpd_gauss_transform.h  cpd_icp.h  cpd_matrix.h  cpd_nonrigid.h  cpd_normalization.h  cpd_transform.h  cpd_utils.h  deform_graph.h  gauss_newton_solver.h  kalman_smoothing.h  keyframer.h  log.h  matching.h  mesh_processing.h  mesh_segmentation.h  mesh_tracking.h  nonrigid_icp.h  prog_opts.h  tests.h  tri_mesh.h  utils.h
meshtracker/src/: DeformGraph.cpp  cloud_processing.cpp  cpd_gauss_transform.cpp  cpd_gauss_transform_make_default.cpp  cpd_icp.cpp  cpd_matrix.cpp  cpd_nonrigid.cpp  cpd_normalization.cpp  cpd_transform.cpp  cpd_utils.cpp  gauss_newton_solver.cpp  kalman_smoothing.cpp  keyframer.cpp  matching.cpp  mesh_processing.cpp  mesh_segmentation.cpp  mesh_tracking.cpp  nonrigid_icp.cpp  tri_mesh.cpp
resource/blender/: README.md  studio.blend  studio.blend1
resource/scripts/: abs_tform.mlx  align_meshes.sh  decimate_meshes.sh  dl_tests.sh  dot_similarity.m  gen_regions.sh  meshlab_decimate.mlx  meshlab_isotropic_remesh.mlx  meshlab_poisson.mlx  meshlab_poisson_6.mlx  meshlab_scale.mlx  meshlab_transform.mlx  plot_dist_weight.py  plot_error.py  poisson_6.sh  remesh_graph.sh  sed_cmd.txt
